# Cognitive_Sim

./: structure.md
Cognitive_Sim/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
Cognitive_Sim/configs/: development.yaml  production.yaml  testing.yaml
Cognitive_Sim/docs/: architecture.md
Cognitive_Sim/requirements/: base.txt
Cognitive_Sim/src/: __main__.py  api.py  config.py  exceptions.py  main.py  performance_monitor.py  system_health.py
Cognitive_Sim/src/core/: agent.py  entropy_calculator.py  memory_layer.py  network.py  optimizer.py
Cognitive_Sim/src/environment/: dataset_manager.py  scheduler.py  simulation_env.py  stability_tracker.py
Cognitive_Sim/src/utils/: logger.py  metrics.py  visualizer.py
